CAS-97: Make question bank import radios visibe and correct page width

--- a/moodle/theme/cass/scss/_core.scss
+++ b/moodle/theme/cass/scss/_core.scss
@@ -2164,3 +2164,7 @@ body.sub-theme-cass #region-main {
   background-color: transparent !important;
   border: none !important;
 }
+
+body.sub-theme-cass.pagelayout-admin #region-main {
+    padding: 2em;
+}
